[gd_scene load_steps=36 format=2]

[ext_resource path="res://Enemy Objects/Boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://Assets/Shadows/shadow.png" type="Texture" id=2]
[ext_resource path="res://NPC/other_astro.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/enemy laser.wav" type="AudioStream" id=4]
[ext_resource path="res://NPC/sit.png" type="Texture" id=5]
[ext_resource path="res://NPC/stand.png" type="Texture" id=6]
[ext_resource path="res://NPC/charging.png" type="Texture" id=7]
[ext_resource path="res://NPC/move.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "recharge",
"speed": 9.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "stand",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle_front",
"speed": 3.0
}, {
"frames": [ SubResource( 27 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "sit",
"speed": 3.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "move",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 12.7596

[node name="Boss" type="KinematicBody2D" groups=["Boss"]]
collision_layer = 4
collision_mask = 13
script = ExtResource( 1 )
SPEED = 50.0
MAX_HP = 200.0
DAMAGE = 2.0
KNOCKBACK_FORCE = 550

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0.0862745, 0.0745098, 0.0745098, 0.490196 )
position = Vector2( 0.595284, 0.793701 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "recharge"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.371628, 0.743256 )
shape = SubResource( 4 )

[node name="BasicLaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 0.8

[node name="SweepTween" type="Tween" parent="."]

[node name="BurstTween" type="Tween" parent="."]

[node name="SweepingBurstTween" type="Tween" parent="."]

[node name="CascadingTween" type="Tween" parent="."]
